fix: resolve mirror-file warnings in ISP MTNMoMoPaymentGateway and Fresh Common
These are the counterparts of files fixed in earlier commits - both projects share
similar code that had diverged.

ISP MTNMoMoPaymentGateway:
- Remove unused imports: JSONArray, ClassPathResource, DateTimeFormat,
  BufferedWriter, SimpleDateFormat, TransactionsLogController
- Fix two null pointer bugs: rs.getStatusCode() called inside if(rs==null) blocks
- Remove unused Token t and token_type variables

Fresh Common:
- Remove 8 unused imports (FileNotFoundException, Optional, HostnameVerifier,
  SSLSession, HttpServletResponse, Header, Autowired, RequestBody)
- Add URI import; replace deprecated new URL(String) with URI.create().toURL()
- Parameterize raw ArrayList, List, Iterator generics
- Remove two unused long userId local variables
- Convert all 12 raw RowMapper<T> anonymous classes to typed lambdas
- Fix getTransactionRowMapper() return type to RowMapper<Transaction>